--- a/dockercompose.yaml
+++ b/dockercompose.yaml
@@ -4,11 +4,17 @@ services:
     environment:
       FRONTEND_URL: "https://3000-${GITPOD_WORKSPACE_ID}.${GITPOD_WORKSPACE_CLUSTER_HOST}"
       BACKEND_URL: "https://4567-${GITPOD_WORKSPACE_ID}.${GITPOD_WORKSPACE_CLUSTER_HOST}"
+      #FRONTEND_URL: "https://${CODESPACE_NAME}-3000.${GITHUB_CODESPACES_PORT_FORWARDING_DOMAIN}"
+      #BACKEND_URL: "https://${CODESPACE_NAME}-4567.${GITHUB_CODESPACES_PORT_FORWARDING_DOMAIN}"
+      OTEL_SERVICE_NAME: 'backend-flask'
       OTEL_EXPORTER_OTLP_ENDPOINT: "https://api.honeycomb.io"
       OTEL_EXPORTER_OTLP_HEADERS: "x-honeycomb-team=${HONEYCOMB_API_KEY}"
-      OTEL_SERVICE_NAME: "backend-flask"
       AWS_XRAY_URL: "*4567-${GITPOD_WORKSPACE_ID}.${GITPOD_WORKSPACE_CLUSTER_HOST}*"
       AWS_XRAY_DAEMON_ADDRESS: "xray-daemon:2000"
+      AWS_DEFAULT_REGION: "${AWS_DEFAULT_REGION}"
+      AWS_ACCESS_KEY_ID: "${AWS_ACCESS_KEY_ID}"
+      AWS_SECRET_ACCESS_KEY: "${AWS_SECRET_ACCESS_KEY}"
+      ROLLBAR_ACCESS_TOKEN: "${ROLLBAR_ACCESS_TOKEN}"
     build: ./backend-flask
     ports:
       - "4567:4567"
@@ -17,7 +23,8 @@ services:
   frontend-react-js:
     environment:
       REACT_APP_BACKEND_URL: "https://4567-${GITPOD_WORKSPACE_ID}.${GITPOD_WORKSPACE_CLUSTER_HOST}"
-      process.env.REACT_APP_AWS_PROJECT_REGION: "us-east-1 "
+      #REACT_APP_BACKEND_URL: "https://${CODESPACE_NAME}-4567.${GITHUB_CODESPACES_PORT_FORWARDING_DOMAIN}"
+      process.env.REACT_APP_AWS_PROJECT_REGION: "us-east-1"
       process.env.REACT_APP_AWS_COGNITO_IDENTITY_POOL_ID: " "
       process.env.REACT_APP_AWS_COGNITO_REGION: "us-east-1 " 
       process.env.REACT_APP_AWS_USER_POOLS_ID: " us-east-1_ONJix3LNM	" 
@@ -49,6 +56,22 @@ services:
       - '5432:5432'
     volumes: 
       - db:/var/lib/postgresql/data    
+  #xray-daemon:
+  #  image: "amazon/aws-xray-daemon"
+  #  environment:
+  #    AWS_ACCESS_KEY_ID: "${AWS_ACCESS_KEY_ID}"
+  #    AWS_SECRET_ACCESS_KEY: "${AWS_SECRET_ACCESS_KEY}"
+  #    AWS_REGION: "us-east-1"
+  #  command:
+  #    - "xray -o -b xray-daemon:2000"
+  #  ports:
+  #   - 2000:2000/udp
+  #  AWS_DEFAULT_REGION: "${AWS_DEFAULT_REGION}"
+  #  AWS_ACCESS_KEY_ID: "${AWS_ACCESS_KEY_ID}"
+  #  AWS_SECRET_ACCESS_KEY: "${AWS_SECRET_ACCESS_KEY}"    
+
+# the name flag is a hack to change the default prepend folder
+# name when outputting the image names
   xray-daemon:
     image: "amazon/aws-xray-daemon"
     environment:
@@ -59,12 +82,6 @@ services:
       - "xray -o -b xray-daemon:2000"
     ports:
       - 2000:2000/udp
-    AWS_DEFAULT_REGION: "${AWS_DEFAULT_REGION}"
-    AWS_ACCESS_KEY_ID: "${AWS_ACCESS_KEY_ID}"
-    AWS_SECRET_ACCESS_KEY: "${AWS_SECRET_ACCESS_KEY}"    
-
-# the name flag is a hack to change the default prepend folder
-# name when outputting the image names
 networks: 
   internal-network:
     driver: bridge
